Simplified logic, made code more readable